samples/_failures_safe/1761083213_99ef36_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_669ae3e1.c: In function ‘main’:
./samples/SAFE/__tmp_669ae3e1.c:134:34: error: missing terminating " character
  134 |     printf("%-20s %s\n", "Word", "
      |                                  ^
./samples/SAFE/__tmp_669ae3e1.c:134:5: error: expected expression at end of input
  134 |     printf("%-20s %s\n", "Word", "
      |     ^~~~~~
./samples/SAFE/__tmp_669ae3e1.c:134:5: error: expected declaration or statement at end of input
